--- a/environment.yml
+++ b/environment.yml
@@ -1,301 +1,22 @@
-name: noaa_mvp
+name: nbs-predictor-mvp
 channels:
-  - pytorch
-  - conda-forge
   - defaults
+  - conda-forge
 dependencies:
-  - anyio=4.4.0=pyhd8ed1ab_0
-  - appnope=0.1.4=pyhd8ed1ab_0
-  - argon2-cffi=23.1.0=pyhd8ed1ab_0
-  - argon2-cffi-bindings=21.2.0=py311heffc1b2_4
-  - arrow=1.3.0=pyhd8ed1ab_0
-  - arviz=0.19.0=pyhd8ed1ab_0
-  - asttokens=2.4.1=pyhd8ed1ab_0
-  - async-lru=2.0.4=pyhd8ed1ab_0
-  - attrs=24.2.0=pyh71513ae_0
-  - babel=2.14.0=pyhd8ed1ab_0
-  - beautifulsoup4=4.12.3=pyha770c72_0
-  - blas=2.117=openblas
-  - blas-devel=3.9.0=17_osxarm64_openblas
-  - bleach=6.1.0=pyhd8ed1ab_0
-  - bottleneck=1.4.0=py311h5d790af_1
-  - brotli=1.1.0=hb547adb_1
-  - brotli-bin=1.1.0=hb547adb_1
-  - brotli-python=1.1.0=py311ha891d26_1
-  - bzip2=1.0.8=h99b78c6_7
-  - c-ares=1.33.0=h99b78c6_0
-  - ca-certificates=2024.7.4=hf0a4a13_0
-  - cached-property=1.5.2=hd8ed1ab_1
-  - cached_property=1.5.2=pyha770c72_1
-  - certifi=2024.7.4=pyhd8ed1ab_0
-  - cffi=1.17.0=py311h4bce835_0
-  - charset-normalizer=3.3.2=pyhd8ed1ab_0
-  - colorama=0.4.6=pyhd8ed1ab_0
-  - comm=0.2.2=pyhd8ed1ab_0
-  - contourpy=1.2.1=py311hcc98501_0
-  - cycler=0.12.1=pyhd8ed1ab_0
-  - cyrus-sasl=2.1.28=h9131b1a_1
-  - debugpy=1.8.5=py311hb9542d7_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - defusedxml=0.7.1=pyhd8ed1ab_0
-  - dm-tree=0.1.8=py311hea19e3d_4
-  - entrypoints=0.4=pyhd8ed1ab_0
-  - exceptiongroup=1.2.2=pyhd8ed1ab_0
-  - execnet=2.1.1=pyhd8ed1ab_0
-  - executing=2.0.1=pyhd8ed1ab_0
-  - filelock=3.15.4=pyhd8ed1ab_0
-  - fonttools=4.53.1=py311hd3f4193_0
-  - fqdn=1.5.1=pyhd8ed1ab_0
-  - freetype=2.12.1=hadb7bae_2
-  - gettext=0.22.5=h8414b35_3
-  - gettext-tools=0.22.5=h8414b35_3
-  - glib=2.80.3=h59d46d9_2
-  - glib-tools=2.80.3=h8ba3eef_2
-  - gmp=6.3.0=h7bae524_2
-  - gmpy2=2.1.5=py311h1e33d93_1
-  - gpytorch=1.12=pyhd8ed1ab_0
-  - gst-plugins-base=1.22.9=h09b4b5e_1
-  - gstreamer=1.22.9=h551c6ff_1
-  - h11=0.14.0=pyhd8ed1ab_0
-  - h2=4.1.0=pyhd8ed1ab_0
-  - h5netcdf=1.3.0=pyhd8ed1ab_0
-  - h5py=3.9.0=nompi_py311h614417e_101
-  - hdf5=1.14.1=nompi_h3aba7b3_100
-  - hpack=4.0.0=pyh9f0ad1d_0
-  - httpcore=1.0.5=pyhd8ed1ab_0
-  - httpx=0.27.0=pyhd8ed1ab_0
-  - hyperframe=6.0.1=pyhd8ed1ab_0
-  - icu=70.1=h6b3803e_0
-  - idna=3.7=pyhd8ed1ab_0
-  - importlib-metadata=8.4.0=pyha770c72_0
-  - importlib_metadata=8.4.0=hd8ed1ab_0
-  - importlib_resources=6.4.3=pyhd8ed1ab_0
-  - iniconfig=2.0.0=pyhd8ed1ab_0
-  - ipykernel=6.29.5=pyh57ce528_0
-  - ipython=8.26.0=pyh707e725_0
-  - ipywidgets=8.1.3=pyhd8ed1ab_0
-  - isoduration=20.11.0=pyhd8ed1ab_0
-  - jax=0.4.27=pyhd8ed1ab_0
-  - jaxlib=0.4.23=py311h313beb8_0
-  - jaxtyping=0.2.19=pyhd8ed1ab_0
-  - jedi=0.19.1=pyhd8ed1ab_0
-  - jinja2=3.1.4=pyhd8ed1ab_0
-  - joblib=1.4.2=pyhd8ed1ab_0
-  - jpeg=9e=h1a8c8d9_3
-  - json5=0.9.25=pyhd8ed1ab_0
-  - jsonpointer=3.0.0=py311h267d04e_0
-  - jsonschema=4.23.0=pyhd8ed1ab_0
-  - jsonschema-specifications=2023.12.1=pyhd8ed1ab_0
-  - jsonschema-with-format-nongpl=4.23.0=hd8ed1ab_0
-  - jupyter=1.0.0=pyhd8ed1ab_10
-  - jupyter-lsp=2.2.5=pyhd8ed1ab_0
-  - jupyter_client=8.6.2=pyhd8ed1ab_0
-  - jupyter_console=6.6.3=pyhd8ed1ab_0
-  - jupyter_core=5.7.2=py311h267d04e_0
-  - jupyter_events=0.10.0=pyhd8ed1ab_0
-  - jupyter_server=2.14.2=pyhd8ed1ab_0
-  - jupyter_server_terminals=0.5.3=pyhd8ed1ab_0
-  - jupyterlab=4.2.4=pyhd8ed1ab_0
-  - jupyterlab_pygments=0.3.0=pyhd8ed1ab_1
-  - jupyterlab_server=2.27.3=pyhd8ed1ab_0
-  - jupyterlab_widgets=3.0.11=pyhd8ed1ab_0
-  - kiwisolver=1.4.5=py311he4fd1f5_1
-  - krb5=1.20.1=h69eda48_0
-  - lcms2=2.15=h481adae_0
-  - lerc=4.0.0=h9a09cb3_0
-  - libabseil=20240116.2=cxx17_h00cdb27_1
-  - libaec=1.1.3=hebf3989_0
-  - libasprintf=0.22.5=h8414b35_3
-  - libasprintf-devel=0.22.5=h8414b35_3
-  - libblas=3.9.0=17_osxarm64_openblas
-  - libbrotlicommon=1.1.0=hb547adb_1
-  - libbrotlidec=1.1.0=hb547adb_1
-  - libbrotlienc=1.1.0=hb547adb_1
-  - libcblas=3.9.0=17_osxarm64_openblas
-  - libclang=14.0.6=default_h5dc8d65_1
-  - libclang13=14.0.6=default_hc7183e1_1
-  - libcurl=8.1.2=h912dcd9_0
-  - libcxx=18.1.8=h5a72898_4
-  - libdeflate=1.17=h1a8c8d9_0
-  - libedit=3.1.20230828=h80987f9_0
-  - libev=4.33=h93a5062_2
-  - libevent=2.1.10=h7673551_4
-  - libexpat=2.6.2=hebf3989_0
-  - libffi=3.4.4=hca03da5_1
-  - libgettextpo=0.22.5=h8414b35_3
-  - libgettextpo-devel=0.22.5=h8414b35_3
-  - libgfortran=5.0.0=12_2_0_hd922786_32
-  - libgfortran5=12.2.0=h0eea778_32
-  - libglib=2.80.3=h59d46d9_2
-  - libiconv=1.17=h0d3ecfb_2
-  - libintl=0.22.5=h8414b35_3
-  - libintl-devel=0.22.5=h8414b35_3
-  - liblapack=3.9.0=17_osxarm64_openblas
-  - liblapacke=3.9.0=17_osxarm64_openblas
-  - libllvm14=14.0.6=hd1a9a77_4
-  - libnghttp2=1.58.0=ha4dd798_0
-  - libogg=1.3.5=h99b78c6_0
-  - libopenblas=0.3.23=openmp_hc731615_0
-  - libopus=1.3.1=h27ca646_1
-  - libpng=1.6.43=h091b4b1_0
-  - libpq=15.3=h7126958_1
-  - libprotobuf=3.21.12=ha614eb4_2
-  - libsodium=1.0.18=h27ca646_1
-  - libsqlite=3.46.0=hfb93653_0
-  - libssh2=1.11.0=h7a5bd25_0
-  - libtiff=4.5.0=h5dffbdd_2
-  - libvorbis=1.3.7=h9f76cd9_0
-  - libwebp-base=1.4.0=h93a5062_0
-  - libxcb=1.13=h9b22ae9_1004
-  - libxml2=2.10.3=h67585b2_4
-  - libzlib=1.3.1=hfb2fe0b_1
-  - linear_operator=0.5.3=pyhd8ed1ab_0
-  - llvm-openmp=15.0.7=h7cfbb63_0
-  - lz4-c=1.9.4=hb7217d7_0
-  - macports-legacy-support=1.3.0=h99b78c6_0
-  - markupsafe=2.1.5=py311h05b510d_0
-  - matplotlib-base=3.9.2=py311hba6b155_0
-  - matplotlib-inline=0.1.7=pyhd8ed1ab_0
-  - mistune=3.0.2=pyhd8ed1ab_0
-  - mizani=0.11.4=pyhd8ed1ab_0
-  - ml_dtypes=0.4.0=py311h4b4568b_1
-  - mpc=1.3.1=h91ba8db_0
-  - mpfr=4.2.1=h1cfca0a_2
-  - mpmath=1.3.0=pyhd8ed1ab_0
-  - multipledispatch=0.6.0=pyhd8ed1ab_1
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - mysql=8.0.32=h44b9a77_0
-  - mysql-client=8.0.32=hf4a1620_0
-  - mysql-common=8.0.32=h518ea0a_0
-  - mysql-devel=8.0.32=h518ea0a_0
-  - mysql-libs=8.0.32=hcb599eb_0
-  - mysql-server=8.0.32=h17425c9_0
-  - nbclient=0.10.0=pyhd8ed1ab_0
-  - nbconvert=7.16.4=hd8ed1ab_1
-  - nbconvert-core=7.16.4=pyhd8ed1ab_1
-  - nbconvert-pandoc=7.16.4=hd8ed1ab_1
-  - nbformat=5.10.4=pyhd8ed1ab_0
-  - ncurses=6.5=hb89a1cb_0
-  - nest-asyncio=1.6.0=pyhd8ed1ab_0
-  - networkx=3.3=pyhd8ed1ab_1
-  - notebook=7.2.1=pyhd8ed1ab_0
-  - notebook-shim=0.2.4=pyhd8ed1ab_0
-  - nspr=4.35=hb7217d7_0
-  - nss=3.103=hc42bcbf_0
-  - numexpr=2.10.0=py311h4b4568b_0
-  - numpy=1.26.4=py311he598dae_0
-  - numpy-base=1.26.4=py311hfbfe69c_0
-  - numpyro=0.15.2=pyhd8ed1ab_0
-  - openblas=0.3.23=openmp_hf78f355_0
-  - openjpeg=2.5.2=h54b8e55_0
-  - openssl=3.1.6=hfb2fe0b_0
-  - opt-einsum=3.3.0=hd8ed1ab_2
-  - opt_einsum=3.3.0=pyhc1e730c_2
-  - overrides=7.7.0=pyhd8ed1ab_0
-  - packaging=24.1=pyhd8ed1ab_0
-  - pandas=2.2.2=py311h4b4568b_1
-  - pandoc=3.3=hce30654_0
-  - pandocfilters=1.5.0=pyhd8ed1ab_0
-  - parso=0.8.4=pyhd8ed1ab_0
-  - patsy=0.5.6=pyhd8ed1ab_0
-  - pcre2=10.44=h297a79d_2
-  - pexpect=4.9.0=pyhd8ed1ab_0
-  - pickleshare=0.7.5=py_1003
-  - pillow=9.4.0=py311h627eb56_1
-  - pip=24.2=pyhd8ed1ab_0
-  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
-  - platformdirs=4.2.2=pyhd8ed1ab_0
-  - plotnine=0.13.6=pyhd8ed1ab_0
-  - pluggy=1.5.0=pyhd8ed1ab_0
-  - ply=3.11=pyhd8ed1ab_2
-  - prometheus_client=0.20.0=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.47=pyha770c72_0
-  - prompt_toolkit=3.0.47=hd8ed1ab_0
-  - properscoring=0.1=py_0
-  - psutil=6.0.0=py311hd3f4193_0
-  - pthread-stubs=0.4=h27ca646_1001
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pure_eval=0.2.3=pyhd8ed1ab_0
-  - pycparser=2.22=pyhd8ed1ab_0
-  - pygments=2.18.0=pyhd8ed1ab_0
-  - pyobjc-core=10.3.1=py311h5f135c3_0
-  - pyobjc-framework-cocoa=10.3.1=py311h5f135c3_0
-  - pyparsing=3.1.2=pyhd8ed1ab_0
-  - pyqt=5.15.10=py311h313beb8_0
-  - pyqt5-sip=12.13.0=py311h80987f9_0
-  - pyro-api=0.1.2=pyhd8ed1ab_0
-  - pyro-ppl=1.9.1=pyhd8ed1ab_0
-  - pysocks=1.7.1=pyha2e5f31_6
-  - pytest=8.3.2=pyhd8ed1ab_0
-  - pytest-env=1.1.3=pyhd8ed1ab_0
-  - pytest-xdist=3.6.1=pyhd8ed1ab_0
-  - python=3.11.6=h47c9636_0_cpython
-  - python-dateutil=2.9.0post0=py311hca03da5_2
-  - python-fastjsonschema=2.20.0=pyhd8ed1ab_0
-  - python-json-logger=2.0.7=pyhd8ed1ab_0
-  - python-tzdata=2024.1=pyhd8ed1ab_0
-  - python_abi=3.11=5_cp311
-  - pytorch=2.4.0=py3.11_0
-  - pytz=2024.1=pyhd8ed1ab_0
-  - pyyaml=6.0.2=py311hd3f4193_0
-  - pyzmq=26.1.1=py311h9bed540_0
-  - qhull=2020.2=h420ef59_5
-  - qt-main=5.15.8=hfe8d25c_6
-  - qtconsole=5.5.2=pyhd8ed1ab_0
-  - qtconsole-base=5.5.2=pyha770c72_0
-  - qtpy=2.4.1=pyhd8ed1ab_0
-  - readline=8.2=h92ec313_1
-  - referencing=0.35.1=pyhd8ed1ab_0
-  - requests=2.32.3=pyhd8ed1ab_0
-  - rfc3339-validator=0.1.4=pyhd8ed1ab_0
-  - rfc3986-validator=0.1.1=pyh9f0ad1d_0
-  - rpds-py=0.20.0=py311h98c6a39_0
-  - scikit-learn=1.5.1=py311h7aedaa7_0
-  - scipy=1.12.0=py311hc76d9b0_0
-  - send2trash=1.8.3=pyh31c8845_0
-  - setuptools=72.2.0=pyhd8ed1ab_0
-  - sip=6.7.12=py311hbaf5611_0
-  - six=1.16.0=pyh6c4a22f_0
-  - sniffio=1.3.1=pyhd8ed1ab_0
-  - soupsieve=2.5=pyhd8ed1ab_1
-  - sqlite=3.46.0=h5838104_0
-  - stack_data=0.6.2=pyhd8ed1ab_0
-  - statsmodels=0.14.2=py311h5d790af_0
-  - sympy=1.13.2=pypyh2585a3b_103
-  - tabulate=0.9.0=pyhd8ed1ab_1
-  - terminado=0.18.1=pyh31c8845_0
-  - threadpoolctl=3.5.0=pyhc1e730c_0
-  - tinycss2=1.3.0=pyhd8ed1ab_0
-  - tk=8.6.13=h5083fa2_1
-  - tomli=2.0.1=pyhd8ed1ab_0
-  - torchaudio=2.4.0=py311_cpu
-  - torchvision=0.15.2=cpu_py311he74fb5d_0
-  - tornado=6.4.1=py311hd3f4193_0
-  - tqdm=4.66.5=pyhd8ed1ab_0
-  - traitlets=5.14.3=pyhd8ed1ab_0
-  - typeguard=4.3.0=pyhd8ed1ab_1
-  - types-python-dateutil=2.9.0.20240821=pyhd8ed1ab_0
-  - typing-extensions=4.12.2=hd8ed1ab_0
-  - typing_extensions=4.12.2=pyha770c72_0
-  - typing_utils=0.1.0=pyhd8ed1ab_0
-  - tzdata=2024a=h0c530f3_0
-  - unicodedata2=15.1.0=py311heffc1b2_0
-  - uri-template=1.3.0=pyhd8ed1ab_0
-  - urllib3=2.2.2=pyhd8ed1ab_1
-  - wcwidth=0.2.13=pyhd8ed1ab_0
-  - webcolors=24.8.0=pyhd8ed1ab_0
-  - webencodings=0.5.1=pyhd8ed1ab_2
-  - websocket-client=1.8.0=pyhd8ed1ab_0
-  - wheel=0.44.0=pyhd8ed1ab_0
-  - widgetsnbextension=4.0.11=pyhd8ed1ab_0
-  - xarray=2024.7.0=pyhd8ed1ab_0
-  - xarray-einstats=0.7.0=pyhd8ed1ab_0
-  - xorg-libxau=1.0.11=hb547adb_0
-  - xorg-libxdmcp=1.1.3=h27ca646_0
-  - xz=5.4.6=h80987f9_1
-  - yaml=0.2.5=h3422bc3_2
-  - zeromq=4.3.5=hebf3989_1
-  - zipp=3.20.0=pyhd8ed1ab_0
-  - zlib=1.3.1=hfb2fe0b_1
-  - zstandard=0.23.0=py311h4a6b76e_0
-  - zstd=1.5.6=hb46c0d2_0
+  - python=3.11
+  - gpytorch
+  - jax[version='0.4.31']
+  - numpy
+  - numpyro
+  - pandas
+  - plotnine
+  - pytorch::pytorch
+  - scikit-learn
+  - torchaudio
+  - torchvision
+  - xarray
+  - pytest
+  - arviz
+  - scipy[version='<1.13']
+  - properscoring
+  - jaxlib[version='0.4.31']
