--- a/.github/workflows/environment-setup.yml
+++ b/.github/workflows/environment-setup.yml
@@ -14,24 +14,26 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os:
+          - ubuntu-latest
+          - windows-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Setup Conda
-      uses: conda-incubator/setup-miniconda@v2
-      with:
-        activate-environment: cross_platform_env
-        environment-file: environment.yml
-        auto-update-conda: true
-        python-version: 3.9
+      - name: Setup Conda
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          activate-environment: cross_platform_env
+          environment-file: environment.yml
+          auto-update-conda: true
+          python-version: 3.9
 
-    - name: Install dependencies
-      run: |
-        conda env update -f environment.yml
-
-    - name: Verify installation
-      run: |
-        python tests/test_imports.py
+      - name: Install dependencies
+        run: |
+          conda env update -f environment.yml
+          
+      - name: Verify installation
+        run: |
+          python tests/test_imports.py
