--- a/.github/workflows/environment-setup.yml
+++ b/.github/workflows/environment-setup.yml
@@ -8,9 +8,10 @@ on:
     branches:
       - mvp_demo_dj
 jobs:
-  build:
+  setup-and-test:
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os:
           - ubuntu-latest
@@ -26,14 +27,23 @@ jobs:
           auto-update-conda: true
           python-version: 3.9
       - name: Install dependencies
+        shell: bash -l {0}
         run: |
           conda env update -f environment.yml
+          conda init bash
+          conda config --set auto_activate_base false
+          source $(conda info --base)/etc/profile.d/conda.sh
           conda activate cross_platform_env
       - name: Verify environment activation
+        shell: bash -l {0}
         run: |
+          source $(conda info --base)/etc/profile.d/conda.sh
+          conda activate cross_platform_env
           echo $CONDA_DEFAULT_ENV
           conda list
       - name: Verify installation
+        shell: bash -l {0}
         run: |
+          source $(conda info --base)/etc/profile.d/conda.sh
           conda activate cross_platform_env
           python tests/test_imports.py
