--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,15 @@ ENV/
 env.bak/
 venv.bak/
 
+# Virtual environment named mvp-env
+mvp-env/
+mvp-env-tmp/
+
+# Shell script files that activate virtual environments
+*.csh
+*.fish
+*.ps1
+
 # Spyder project settings
 .spyderproject
 .spyproject
@@ -159,3 +168,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 data/
+/.vscode/
+/_scratch/
