--- a/.setup_scripts/vscode_settings.jsonc
+++ b/.setup_scripts/vscode_settings.jsonc
@@ -24,7 +24,7 @@
         "**/.git": true,
         "**/.DS_Store": true,
         "**/__pycache__": true,
-        "**/**/*.pyc": true,
+        "**/**/*.pyc": true
     },
     // PYTHON SETTINGS
     // Python interpreter
@@ -49,6 +49,6 @@
             120
         ],
         "editor.tabSize": 4,
-        "editor.insertSpaces": true,
-    },
+        "editor.insertSpaces": true
+    }
 }
