--- a/.gitignore
+++ b/.gitignore
@@ -171,5 +171,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 data/
-.vscode
-/_scratch/
+/.vscode/
+/_scratch*/
